...
                            ),
                          ),
                        ),
                        const Align(
                          alignment: Alignment.topLeft,
                          child: Text(
                            'Please enter your credentials to proceed',
                            style: TextStyle(
                              fontSize: 18,
                              color: Colors.black,
                            ),
                          ),
                        ),
...
                              color: Colors.grey.withOpacity(0.3),
                              borderRadius: BorderRadius.circular(20),
                            ),
                            child: Column(
                              children: [
                                TextField(
                                  key: const Key('fullNameField'),
                                  controller: fullNameController,
                                  decoration: const InputDecoration(
                                    labelText: 'Full Name',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
...
                                          BorderSide(color: Colors.black),
                                    ),
                                  ),
                                ),
                                const SizedBox(height: 20),
                                TextField(
                                  key: const Key('phoneField'),
                                  controller: phoneController,
                                  decoration: const InputDecoration(
                                    labelText: 'Phone',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
...
                                          BorderSide(color: Colors.black),
                                    ),
                                  ),
                                ),
                                const SizedBox(height: 20),
                                TextField(
                                  key: const Key('emailField'),
                                  controller: emailController,
                                  decoration: const InputDecoration(
                                    labelText: 'Email address',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
...
                                          BorderSide(color: Colors.black),
                                    ),
                                  ),
                                ),
                                const SizedBox(height: 20),
                                TextField(
                                  key: const Key('passwordField'),
                                  controller: passwordController,
                                  obscureText: true,
                                  decoration: const InputDecoration(
                                    labelText: 'Password',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
                                          BorderSide(color: Colors.black),
                                    ),
                                    focusedBorder: UnderlineInputBorder(
...
                                          BorderSide(color: Colors.black),
                                    ),
                                  ),
                                ),
                                const SizedBox(height: 20),
                                DropdownButtonFormField(
                                  key: const Key('sexDropdown'),
                                  decoration: const InputDecoration(
                                    labelText: 'Sex',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
                                          BorderSide(color: Colors.black),
...
                                      borderSide:
                                          BorderSide(color: Colors.black),
                                    ),
                                  ),
                                  items: const [
                                    DropdownMenuItem(
                                      child: Text('Male'),
                                      value: 'Male',
                                    ),
                                    DropdownMenuItem(
                                      child: Text('Female'),
                                      value: 'Female',
                                    ),
...
                                  onChanged: (value) {
                                    sex = value as String?;
                                  },
                                ),
                                const SizedBox(height: 20),
                                TextField(
                                  key: const Key('ageField'),
                                  controller: ageController,
                                  decoration: const InputDecoration(
                                    labelText: 'Age',
                                    labelStyle: TextStyle(color: Colors.black),
                                    enabledBorder: UnderlineInputBorder(
                                      borderSide:
...
                                    ),
                                  ),
                                  keyboardType: TextInputType.number,
                                ),
                                const SizedBox(height: 20),
                                ElevatedButton(
                                  key: const Key("createAccountButton"),
                                  onPressed: () async {
                                    String fullName = fullNameController.text;
                                    String email = emailController.text;
                                    String phone = phoneController.text;
                                    String password = passwordController.text;
                                    int age =
...
