...
                      color: Colors.white,
                      borderRadius: BorderRadius.circular(20),
                    ),
                    child: Column(
                      children: [
                        TextField(
                          key:const Key('Username'),
                          controller: emailController,
                          decoration: const InputDecoration(
                            prefixIcon: Icon(Icons.email),
                            labelText: 'Username',
                          ),
                        ),
...
                        ),
                        const SizedBox(height: 20),
                        Row(
                          mainAxisAlignment: MainAxisAlignment.spaceBetween,
                          children: [
                            const Text(
                              'Forgot Details?',
                              style: TextStyle(
                                color: Colors.red,
                              ),
                            ),
                            GestureDetector(
                              onTap: () {
...
                                  MaterialPageRoute(
                                    builder: (context) => CreateAccountScreen(), // Navegar a la pantalla de crear cuenta
                                  ),
                                );
                              },
                              child: const Text(
                                'Create Account',
                                style: TextStyle(
                                  color: Colors.blue,
                                ),
                              ),
                            ),
                          ],
                        ),
                        const SizedBox(height: 20),
                        ElevatedButton(
                          key: const Key('loginButton'),
                          onPressed: () async {
                            String email = emailController.text;
                            String password = passwordController.text;

                            // Validar credenciales en la base de datos (en DBHelper)
                            bool isValidUser = await DBHelper.validateUser(email, password);
...
